# morpheus

./: .gitattributes  .gitignore  BENCHMARKS.md  INSTALL.md  README.md  TODO.md  pyproject.toml
checkpoints/jepa_tau2_align/: config.json  history.json
checkpoints/router/: router.json
configs/: jepa.yaml  jepa_apigen.yaml  jepa_apigen_goal.yaml  jepa_tau2_align.yaml  jepa_wm_smoke.yaml  jepa_wm_tau2.yaml  phase1.yaml  qwen_local.yaml  qwen_mock_fast.yaml  qwen_mock_hard.yaml  qwen_tau2.yaml  qwen_tau2_jepawm.yaml  qwen_tau2_retail74.yaml  qwen_tau2_telecom_solo.yaml
data/annotations/: README.md  tau2_error_novelty.jsonl
data/bench_snapshots/: retail74_baseline_partiel_20260715.jsonl
data/benchmarks/: retail_nojudge.json
data/kb/: README.md  airline.md  retail.md  telecom.md
data/router/: dataset.jsonl
data/tau2_replay/: retail.jsonl  retail_align_train.jsonl  retail_align_val.jsonl  retail_write_negatives.jsonl
scripts/: build_kb.py  build_nojudge_bench.py  build_router_dataset.py  build_tau2_alignment_data.py  build_write_negatives.py  check_goal_discrimination.py  decompose_failures.py  generate_tagged_traces.py  install_pinned.sh  measure_run_variance.py  probe_action_granularity.py  probe_fatal_step_alternatives.py  probe_predictor_form_vs_content.py  probe_predictor_identity.py  probe_tau2_goal_range.py  probe_verifier_prompt_ab.py  probe_verifier_zeroshot.py  replay_ranker_offline.py  replay_reference_trajectories.py  runpod_setup.sh  serve_qwen_vllm.sh  validate_goal_signal.py
specs/: 00-contexte-experience.md  01-orchestrateur-jepa-qwen.md  02-benchmark-reference.md  03-scaffold.md  04-runpod-qwen.md  05-jepa-training.md  README.md
tests/: test_jepa.py  test_jepa_wm.py  test_knowledge.py  test_memory.py  test_report.py  test_router.py  test_signals.py  test_smoke.py  test_system_context.py  test_tau2.py  test_turn_budget.py
(+46 files in other folders)
