[project]
name = "morpheus"
version = "0.1.0"
description = "Orchestrateur agentique Qwen + world-model latent (JEPA) pour le tool-use multi-tours single-GPU"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Connecteur LLM local (Qwen via endpoint OpenAI-compatible : vLLM / llama.cpp / TGI)
openai = ["openai>=1.40"]
# Ligne de référence supérieure (API Sonnet 4.6)
anthropic = ["anthropic>=0.40"]
# Environnement réel de Phase 0/1
tau2 = ["tau2-bench"]
# Entraînement JEPA (Phase 2) — sur GPU RunPod
jepa = ["torch>=2.2", "numpy>=1.26", "sentence-transformers>=3.0", "datasets>=2.19"]
dev = ["pytest>=8.0", "numpy>=1.26"]

[project.scripts]
morpheus = "morpheus.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/morpheus"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
